Fix z-index issue on advanced search: (#395)
- ensure menu is over other inputs
- ensure menu is over map
- ensure datepicker is over other inputs
- ensure menu is same with than input

issue https://github.com/catima/catima/issues/393

--- a/app/assets/stylesheets/webpack/reference-editor/reference-editor.css
+++ b/app/assets/stylesheets/webpack/reference-editor/reference-editor.css
@@ -71,14 +71,12 @@
 
 .referenceEditor .css1pahdxg-control, .reference-search-container .css1pahdxg-control,
 .referenceEditor .select__menu, .reference-search-container .select__menu,
-.single-reference-filter,
-.referenceEditor .css-26l3qy-menu, .reference-search-container .css-26l3qy-menu {
-    z-index: 1001;
+.single-reference-filter {
     text-align: left;
 }
 
-.css-2b097c-container {
-    position: initial !important;
+.referenceEditor .css-26l3qy-menu, .reference-search-container .css-26l3qy-menu {
+    z-index: 1001; /*  ensure menu over the map  */
 }
 
 .referenceEditor .single-reference-container .input-group-addon {
